--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ssdd.myapplication">
+    package="com.ssdd.myapplication"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-sdk
+        android:minSdkVersion="18"
+        android:targetSdkVersion="26" />
+
+    <!--  TODO - add uses-permission elements -->
 
     <application
         android:allowBackup="true"
@@ -10,14 +18,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".ActivityLoaderActivity"
+            android:label="@string/title_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".BookmarksActivity"
+            android:label="@string/title_permissions" >
+        </activity>
+        <activity
+            android:name=".GoToDangerousActivity"
+            android:label="@string/title_activity_customization" >
         </activity>
     </application>
 
